[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/components/main-frame.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/examples/rich-presence.gd" type="Script" id=2]
[ext_resource path="res://data/themes/button-theme.tres" type="Theme" id=3]
[ext_resource path="res://data/fonts/descriptions.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/components/main-output.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/fonts/list-titles.tres" type="DynamicFont" id=6]
[ext_resource path="res://data/themes/dropdown-theme.tres" type="Theme" id=7]

[node name="Rich Presence" type="Panel"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="." instance=ExtResource( 1 )]

[node name="Title" parent="Frame/Main/Topbar" index="1"]
text = "Rich Presence Example"

[node name="Message" type="Label" parent="Frame/Main" index="1"]
margin_top = 73.0
margin_right = 905.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 4 )
text = "With this we will set the rich presence text next to your avatar in the Steam client's friends list.  These can be called to update a player's status in the game.

These must be set up in the Steamworks back-end to work properly.  We will be using the SpaceWar rich presence keys.  Check out Valve's documentation for more information how to set up the file needed."
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pick" type="VBoxContainer" parent="Frame/Main" index="2"]
margin_top = 200.0
margin_right = 905.0
margin_bottom = 264.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Frame/Main/Pick"]
margin_right = 905.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 6 )
text = "Select A Rich Presence"
__meta__ = {
"_edit_lock_": true
}

[node name="Keys" type="OptionButton" parent="Frame/Main/Pick"]
margin_top = 26.0
margin_right = 905.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
text = "Rich Presence Keys"
__meta__ = {
"_edit_lock_": true
}

[node name="Output" parent="Frame/Main" index="3" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_top = 289.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SetRichPresence" type="Button" parent="Frame/Sidebar/Options/List" index="1"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 60.0
theme = ExtResource( 3 )
text = "Set Rich Presence"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Spacer1" type="Label" parent="Frame/Sidebar/Options/List" index="2"]
margin_top = 70.0
margin_right = 270.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="GetRichPresence" type="Button" parent="Frame/Sidebar/Options/List" index="3"]
margin_top = 99.0
margin_right = 270.0
margin_bottom = 127.0
theme = ExtResource( 3 )
text = "Get Rich Presence"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="GetKeyCount" type="Button" parent="Frame/Sidebar/Options/List" index="4"]
margin_top = 137.0
margin_right = 270.0
margin_bottom = 165.0
theme = ExtResource( 3 )
text = "Get Rich Presence Key Count"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Spacer2" type="Label" parent="Frame/Sidebar/Options/List" index="5"]
margin_top = 175.0
margin_right = 270.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="ValveDocs" type="Button" parent="Frame/Sidebar/Options/List" index="6"]
margin_top = 204.0
margin_right = 270.0
margin_bottom = 232.0
theme = ExtResource( 3 )
text = "See Valve's Documentation"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="Frame/Sidebar/Options/List" index="7"]
margin_top = 242.0
margin_right = 270.0
margin_bottom = 270.0
theme = ExtResource( 3 )
text = "Back To Main Menu"
align = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="item_selected" from="Frame/Main/Pick/Keys" to="." method="_on_keys_item_selected"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/SetRichPresence" to="." method="_on_set_rich_presence_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/GetRichPresence" to="." method="_on_get_rich_presence_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/GetKeyCount" to="." method="_on_get_key_count_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/ValveDocs" to="." method="_on_valve_docs_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Back" to="." method="_on_back_pressed"]

[editable path="Frame"]
